Fixes: add gallery-macros, tweak texts, fix typo

--- a/pages/stable-diffusion-gallery/templates/index_template.jinja
+++ b/pages/stable-diffusion-gallery/templates/index_template.jinja
@@ -50,7 +50,9 @@
 
   {{ gallery_macros.section(0, 40,
                               gallery_config['title'],
-                              "Generated as a collaboration between lstein's stable-diffusion and tildbyte. Click on the images for a look at a larger version, as well as the prompt used for generation.",
+                              "Generated as a collaboration between tildebyte and lstein's stable-diffusion.
+                              <br />
+                              Click on the images to see them full-sized, as well as the prompt used for generation.",
                               images)}}
 
   {{ gallery_macros.section(40, images|length,
