--- a/pages/stable-diffusion-gallery/templates/index_template.jinja
+++ b/pages/stable-diffusion-gallery/templates/index_template.jinja
@@ -48,27 +48,27 @@
 
   <!-- GALLERY DESCRIPTIONS -->
 
-  {{ gallery_macros.section(0, 6,
-                              "A kitten in a tuxedo, on his way to a funeral, as photographed by Edward Weston",
+  {{ gallery_macros.section(0, 7,
+                              "Funeral cats, as photographed by Edward Weston or by Frieke Janssens",
                               "",
                               images)}}
 
-  {{ gallery_macros.section(6, 40,
+  {{ gallery_macros.section(7, 41,
                               "Miscellaneous images",
                               "",
                               images)}}
 
-  {{ gallery_macros.section(40, 62,
+  {{ gallery_macros.section(41, 63,
                               "Major Arcana of the Tarot, by Zdzislaw Beksinski and Tomasz Alen Kopera",
                               "Prompts: a painting of the X tarot card, precisionism, fractalism, dystopian art, by Zdzislaw Beksinski 1975 and Tomasz Alen Kopera 1976",
                               images) }}
 
-  {{ gallery_macros.section(62, 73,
+  {{ gallery_macros.section(63, 74,
                               "Funeral kittens in tuxedos, by Zdzislaw Beksinski and Tomasz Alen Kopera",
                               "",
                               images) }}
 
-  {{ gallery_macros.section(73, 74,
+  {{ gallery_macros.section(74, 75,
                               "More images",
                               "",
                               images) }}
